use sed to make java params come from ENV